# ai-studio

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/studio/: __init__.py  serialization.py
src/studio/application/: __init__.py  command_worker.py  driver.py  event_pump.py  outbox_relay.py  routing_worker.py
src/studio/domain/: __init__.py  _base.py  artifacts.py  budget.py  enums.py  ids.py  stages.py  tasks.py
src/studio/examples/: __init__.py
src/studio/infrastructure/: __init__.py
src/studio/kernel/: __init__.py  decisions.py  envelopes.py  errors.py  fingerprints.py  identifiers.py  outcomes.py  ports.py  process_manager.py
src/studio/production/: __init__.py  activity_worker.py  attempt.py  attempt_payloads.py  budget.py  compile.py  delivery_pm.py  dispatch.py  execution_spec.py  gate.py  gate_pm.py  identity.py  page_projection.py  payloads.py  pipeline.py  planning_pm.py  process_managers.py  project.py  projections.py  provider_op.py  provider_port.py  qc_scheduling_pm.py  quality.py  reconcile.py  (+8 more)
tests/: fake_provider.py  kernel_helpers.py  m4_helpers.py  m5_helpers.py  production_helpers.py  test_domain_m1.py  test_kernel_m2.py  test_kernel_m2_hardening.py  test_kernel_m2_txn.py  test_m4_activity.py  test_m4_attempt.py  test_m4_deciders.py  test_m4_integration.py  test_m4_ordering.py  test_m4_plan_rework.py  test_m4_planning.py  test_m4_reconcile.py  test_m4_saga.py  test_m5_await_human.py  test_m5_confluence_delivery.py  test_m5_gate.py  test_m5_gate_pm.py  test_m5_golden.py  test_m5_lifecycle.py  test_m5_page_projection.py  test_m5_pipeline.py  test_m5_qc_scheduling.py  test_m5_quality_report.py  test_m5_rework.py  test_m5_rework_pm.py  test_production_m3.py  test_production_m3_hardening.py
(+12 files in other folders)
