[project]
name = "ai-studio"
version = "0.0.1"
description = "AI 制片工作室 · 事件溯源工作流内核 (P0A)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.7",
]

# 质量门工具锁定上界:保证 pytest/ruff/mypy strict 结果可复现,
# 避免未来不兼容大版本(如 mypy 2.x)引入 internal error 或规则漂移。
[project.optional-dependencies]
dev = [
    "pytest>=8.0,<10",
    "pytest-asyncio>=0.23,<2",
    "ruff>=0.5,<0.16",
    "mypy>=1.10,<2",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["studio"]
mypy_path = "src"
